--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,6 @@
   <title>RailsDay2Chapter3</title>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
   <!--[if lt IE 9]>
   <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
   </script>
@@ -13,8 +12,12 @@
 <body>
 <%= render 'layouts/header' %>
 <div class="container">
+	<% flash.each do |message_type, message| %>
+		<div class = "alert alert-<%= message_type%>"><%= message%></div>
+	<%end%>
 <%= yield %>
 <%= render 'layouts/footer' %>
+<%= debug(params) if Rails.env.development? %>
 </div>
 </body>
 </html>
