--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages', object: f.object %>
       <%= f.label :name %>
       <%= f.text_field :name,class: 'form-control' %>
 
@@ -19,5 +19,6 @@
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
+    
   </div>
 </div>
